--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,16 +6,17 @@
       <li (click)="onOptionClick('Option 3')">Option 3</li>
     </ul>
   </div> -->
-  
-  <!-- Main Layout -->
-  <div class="app-wrapper">
-    <router-outlet></router-outlet>
-    <app-titlebar class="title-bar"></app-titlebar>
-    <app-onboarding *ngIf="!completedOnboarding" (completed)="finishOnboarding()" class="onboarding"></app-onboarding>
-    <app-home appRightClick></app-home> <!-- Enable Right-Click on Home -->
-    <ng-container *ngIf="isMobile$ | async">
-      <div class="mobile-tab-bar">
-        <app-tabs-buttons></app-tabs-buttons>
-      </div>
-    </ng-container>
-  </div>
+
+<!-- Main Layout -->
+<div class="app-wrapper">
+  <router-outlet></router-outlet>
+  <app-titlebar class="title-bar"></app-titlebar>
+  <app-onboarding *ngIf="!completedOnboarding" class="onboarding" (completed)="finishOnboarding()">
+  </app-onboarding>
+  <app-home appRightClick></app-home> <!-- Enable Right-Click on Home -->
+  <ng-container *ngIf="isMobile$ | async">
+    <div class="mobile-tab-bar">
+      <app-tabs-buttons></app-tabs-buttons>
+    </div>
+  </ng-container>
+</div>
