--- a/src/app/components/onboarding/onboarding.component.html
+++ b/src/app/components/onboarding/onboarding.component.html
@@ -43,13 +43,13 @@
         <mat-icon svgIcon="right-arrow"></mat-icon>
       </button>
 
-      <button mat-icon-button color="accent" *ngIf="shouldShowInstallRcloneButton()" (click)="installRclone()" [disabled]="installing"
+      <button mat-raised-button color="accent" *ngIf="shouldShowInstallRcloneButton()" (click)="installRclone()" [disabled]="installing"
         aria-label="Install Rclone">
         <mat-icon svgIcon="download"></mat-icon>
         {{ installing ? 'Installing...' : 'Install Rclone' }}
       </button>
 
-      <button mat-icon-button  color="accent" *ngIf="shouldShowInstallPluginButton()" (click)="installMountPlugin()" [disabled]="downloadingPlugin"
+      <button mat-raised-button color="accent" *ngIf="shouldShowInstallPluginButton()" (click)="installMountPlugin()" [disabled]="downloadingPlugin"
         aria-label="Install Plugin">
         <mat-icon svgIcon="download"></mat-icon>
         {{ downloadingPlugin ? 'Downloading...' : 'Install Plugin' }}
