--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -21,7 +21,7 @@
     top: 0;
     background-color: var(--app-background);
     z-index: 10;
-    box-shadow: 0 2px 5px var(--shadow-color);
+    box-shadow: var(--box-shadow);
     padding-block: 10px;
   }
 
@@ -43,7 +43,7 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
-    box-shadow: 0 0 8px var(--shadow-color);
+    box-shadow: var(--box-shadow);
 
     &:hover {
       background-color: var(--hover-color);
