--- a/src/app/components/tabs-buttons/tabs-buttons.component.scss
+++ b/src/app/components/tabs-buttons/tabs-buttons.component.scss
@@ -5,26 +5,20 @@
   justify-content: center;
   gap: 10px;
   .mat-mdc-icon-button {
-    border-radius: 20% !important;
-    transition: all 200ms ease !important;
-
-    // Selected state
     &.selected {
       outline: none !important;
       background-color: var(--button-hover) !important;
 
-      // Fix for ripple effect
       .mat-mdc-button-persistent-ripple::before {
         opacity: 0.12 !important;
-        background-color: var(--accent-color) !important;
+        background-color: var(--selected-tab-color) !important;
       }
     }
 
-    // Active and focus states
     &:active,
     &:focus-visible {
       outline: none !important;
-      background-color: var(--button-hover) !important;
+      background-color: var(--selected-tab-color) !important;
     }
   }
 }
