--- a/src/app/modals/about-modal/about-modal.component.scss
+++ b/src/app/modals/about-modal/about-modal.component.scss
@@ -1,24 +1,36 @@
 .about-modal {
   height: 100%;
-  background: var(--secondary-background);
-  box-shadow: 0 4px 12px var(--shadow-color);
+  background: var(--app-background);
   display: flex;
   flex-direction: column;
   position: relative; /* Ensure absolute positioning works for children */
   overflow: hidden; /* Hide overflow from children */
 
+  .modal-header {
+    transition: box-shadow 0.2s;
+    box-shadow: none;
+  
+    &.scrolled {
+      box-shadow: var(--box-shadow);
+    }
+  
+    p {
+      opacity: 0;
+      transition: opacity 0.5s ease-in-out;
+    }
+    &.scrolled p {
+      opacity: 1;
+    }
+  }
+
   .modal-content {
-    padding: 16px;
+    padding: 12px;
     overflow: auto;
     position: relative;
     height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-
-    &.blurred {
-      filter: blur(4px);
-    }
 
   }
 
@@ -44,11 +56,11 @@
   .version-badge {
     display: inline-block;
     background: #e0f2fe;
-    color: #007acc;
+    color: var(--accent-color);
     padding: 5px 12px;
-    border-radius: 10px;
+    border-radius: 16px;
     font-weight: bold;
-    font-size: 14px;
+    font-size: 16px;
 
     &:hover {
       background: #d6e7f9;
@@ -67,24 +79,18 @@
   .about-item {
     display: flex;
     justify-content: space-between;
-    padding: 16px;
-    background-color: var(--app-background);
-    color: var(--app-text-color);
-    border-radius: 16px;
-    font-weight: 500;
-    text-align: left;
-    box-shadow: 0px 0px 4px var(--shadow-color);
-    width: 100%;
+    padding-inline-start: 16px;
+    background-color: var(--secondary-background);
     flex-direction: row-reverse !important;
-
-    &:hover {
-      background: var(--hover-color);
-    }
+    height: 54px !important;
+    width: 100%;
+    box-shadow: var(--box-shadow);
+    
   }
   .stacked-buttons {
     display: flex;
     flex-direction: column;
-    box-shadow: 0px 0px 4px var(--shadow-color);
+    box-shadow: var(--box-shadow);
     border-radius: 16px;
 
     .about-item {
@@ -100,7 +106,7 @@
     width: 100%;
     height: 100%;
     background: var(--secondary-background);
-    box-shadow: 0px 4px 10px var(--shadow-color);
+    box-shadow: var(--box-shadow);
     display: flex;
     flex-direction: column;
     align-items: center;
