--- a/src/app/modals/preferences-modal/preferences-modal.component.scss
+++ b/src/app/modals/preferences-modal/preferences-modal.component.scss
@@ -1,17 +1,44 @@
 .modal {
   height: 100%;
-  background: var(--secondary-background);
-  box-shadow: 0 4px 12px var(--shadow-color);
+  background: var(--app-background);
   display: flex;
   flex-direction: column;
   position: relative;
   overflow: hidden;
 
+  
   .modal-header {
     .tabs {
       display: flex;
       gap: 2vw;
       align-items: center;
+
+      .mat-mdc-raised-button,
+      .mat-mdc-raised-button .mdc-button__ripple,
+      .mat-mdc-button,
+      .mat-mdc-unelevated-button,
+      .mat-mdc-outlined-button {
+        background-color: transparent !important;
+    
+        // Selected state
+        &.selected {
+          outline: none !important;
+          background-color: var(--button-hover) !important;
+    
+          // Fix for ripple effect
+          .mat-mdc-button-persistent-ripple::before {
+            opacity: 0.12 !important;
+            background-color: var(--selected-tab-color) !important;
+          }
+        }
+    
+        // Active and focus states
+        &:active,
+        &:focus-visible {
+          outline: none !important;
+          background-color: var(--selected-tab-color) !important;
+        }
+      }
     }
     h2 {
       font-weight: 600;
@@ -56,11 +83,11 @@
           display: flex;
           align-items: center;
           justify-content: space-between;
-          background: var(--app-background);
+          background: var(--secondary-background);
           padding: 12px 16px;
           border-radius: calc(var(--border-radius) * 2);
           width: 90%;
-          box-shadow: 0 0 4px var(--shadow-color);
+          box-shadow: var(--box-shadow);
 
           .setting-info {
             display: flex;
