--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <mat-sidenav-container class="home-container">
   <!-- Sidebar -->
   <mat-sidenav #sidenav [(opened)]="isSidebarOpen" [mode]="sidebarMode">
-    <app-sidebar [remotes]="remotes" (remoteSelected)="selectRemote($event)"></app-sidebar>
+    <app-sidebar [iconService]="iconService" [remotes]="remotes" (remoteSelected)="selectRemote($event)"></app-sidebar>
   </mat-sidenav>
 
   <!-- Main Content -->
@@ -75,7 +75,7 @@
 
     <!-- Overview Components -->
     <ng-container *ngIf="remotes.length > 0 && !selectedRemote">
-      <app-mount-overview *ngIf="currentTab === 'mount'" [remotes]="remotes" (remoteSelected)="selectRemote($event)"
+      <app-mount-overview *ngIf="currentTab === 'mount'" [iconService]="iconService" [remotes]="remotes" (remoteSelected)="selectRemote($event)"
         (mountRemote)="mountRemote($event)" (openInFiles)="openRemoteInFiles($event)">
       </app-mount-overview>
 
@@ -87,7 +87,7 @@
 
     <!-- Remote Detail View -->
     <ng-container *ngIf="selectedRemote">
-      <app-mount-detail *ngIf="currentTab === 'mount'" [selectedRemote]="selectedRemote"
+      <app-mount-detail *ngIf="currentTab === 'mount'" [iconService]="iconService" [selectedRemote]="selectedRemote"
         [remoteSettings]="loadRemoteSettings(selectedRemote.remoteSpecs.name)" (mountRemote)="mountRemote($event)"
         [actionInProgress]="actionInProgress[selectedRemote.remoteSpecs.name]" (unmountRemote)="unmountRemote($event)"
         (openRemoteConfigModal)="openRemoteConfigModal($event.editTarget, $event.existingConfig)"
